[package]
name = "replicante_data_store"
version = "0.1.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "Replicante data storage interface"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[badges]
maintenance = { status = "actively-developed" }


[dependencies]
bson = "^0.12.0"
error-chain = "^0.12.0"
lazy_static = "^1.0.0"
mongodb = "^0.3.10"
prometheus = "^0.4.1"
regex = "^1.0.0"
serde = "^1.0.34"
serde_derive = "^1.0.34"
slog = "^2.2.0"

replicante_agent_models = { path = "../../common/agent/models" }
replicante_data_models = { path = "../models" }
