[package]
name = "replicante_data_store"
version = "0.2.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]

description = "Replicante data storage interface"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[badges]
maintenance = { status = "actively-developed" }


[dependencies]
bson = "=0.13.0"
chrono = "^0.4.6"
failure = "^0.1.5"
failure_derive = "^0.1.5"
lazy_static = "^1.0.0"
mongodb = "^0.3.10"
prometheus = "^0.5.0"
regex = "^1.0.0"
serde = "^1.0.34"
serde_derive = "^1.0.34"
slog = "^2.2.0"

replicante_agent_models = { path = "../../common/agent/models" }
replicante_data_models = { path = "../models" }
replicante_util_failure = { path = "../../common/util/failure" }
