[package]
name = "replicante_data_store"
version = "0.3.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Replicante data storage interface"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[badges]
maintenance = { status = "actively-developed" }


[features]
with_test_support = []


[dependencies]
bson = "=0.13.0"
chrono = "^0.4.6"
failure = "^0.1.5"
lazy_static = "^1.0.0"
mongodb = "^0.3.10"
opentracingrust = "^0.3.3"
prometheus = "^0.5.0"
regex = "^1.0.0"
semver = { version = "^0.9.0", features = ["serde"] }
serde = "^1.0.34"
serde_derive = "^1.0.34"
serde_json = "^1.0.39"
slog = "^2.2.0"

replicante_data_models = { path = "../models" }
replicante_models_api = { path = "../../common/models/api" }
replicante_service_healthcheck = { path = "../../service/healthcheck" }
replicante_util_tracing = { path = "../../common/util/tracing" }
