[package]
name = "replidev"
version = "0.2.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"
build = "../../build.rs"

description = "Replicante Development Tool"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
readme = "./README.md"
license = "MIT"


[[bin]]
name = "replidev"
path = "src/main.rs"


[lib]
name = "replidev"
path = "src/lib.rs"


[dependencies]
actix-rt = "^1.0.0"
actix-web = "^3.2.0"
anyhow = "^1.0.0"
chrono = "^0.4.0"
dialoguer = "^0.9.0"
failure = "^0.1.5"
git2 = "^0.15.0"
glob = "^0.3.0"
handlebars = "^3.0.0"
ignore = "^0.4.0"
lazy_static = "^1.4.0"
pnet_datalink = "^0.26.0"
prettytable-rs = "^0.8.0"
rand = "^0.7.0"
semver = "^0.11.0"
serde = "^1.0.105"
serde_json = "^1.0.0"
serde_yaml = "^0.8.11"
structopt = "^0.3.0"
thiserror = "^1.0.0"
toml = "^0.5.6"

replicante_models_core = { path = "../../models/core" }
replicante_util_failure = { path = "../../common/util/failure" }

[dependencies.tokio]
features = ["full"]
version = "^0.2.0"


[build-dependencies]
git2 = "^0.15.0"


[workspace]
# Make sure this crate is NOT part of the main workspace.
