[package]
name = "replidev"
version = "0.2.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"
build = "../../build.rs"

description = "Replicante Development Tool"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
readme = "./README.md"
license = "MIT"


[[bin]]
name = "replidev"
path = "src/main.rs"


[lib]
name = "replidev"
path = "src/lib.rs"


[dependencies]
actix-web = "^4.0"
anyhow = "^1.0"
clap = { version = "^4.0", features = ["derive"] }
chrono = "^0.4"
dialoguer = "^0.10"
failure = "^0.1.5"
git2 = "^0.15"
glob = "^0.3"
handlebars = "^4.0"
ignore = "^0.4"
lazy_static = "^1.4"
pnet_datalink = "^0.31"
prettytable-rs = "^0.9"
rand = "^0.8"
replisdk = { version = "^0.1", features = ["platform-models"] }
semver = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.9"
thiserror = "^1.0"
toml = "^0.5"

replicante_models_core = { path = "../../models/core" }
replicante_util_failure = { path = "../../common/util/failure" }

[dependencies.tokio]
features = ["full"]
version = "^1.0"


[build-dependencies]
git2 = "^0.15.0"


[workspace]
# Make sure this crate is NOT part of the main workspace.
