[package]
name = "replidev"
version = "0.3.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"
build = "../../build.rs"

description = "Replicante Development Tool"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicore"
readme = "./README.md"
license = "MIT"


[[bin]]
name = "replidev"
path = "src/main.rs"


[lib]
name = "replidev"
path = "src/lib.rs"


[dependencies]
actix-web = "^4.0"
anyhow = "^1.0"
async-trait = "^0.1"
chrono = "^0.4"
clap = { version = "^4.0", features = ["derive"] }
dialoguer = "^0.10"
git2 = "^0.15"
glob = "^0.3"
handlebars = "^4.0"
ignore = "^0.4"
json-patch = "^0.3"
lazy_static = "^1.4"
pnet_datalink = "^0.31"
prettytable-rs = "^0.10"
rand = "^0.8"
semver = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.9"
slog = "^2.7"
slog-term = "^2.9"
tera = "^1.0"
thiserror = "^1.0"
toml = "^0.5"

replicante_models_core = { path = "../../models/core" }

[dependencies.replisdk]
features = [
  "platform-framework",
  "platform-framework_actix",
  "platform-models",
  "utils-actix_error",
]
version = "^0.1"

[dependencies.replisdk-experimental]
features = [
  "platform-templates",
]
version = "^0.1"

[dependencies.tokio]
features = ["full"]
version = "^1.0"


[build-dependencies]
git2 = "^0.15.0"


[patch.crates-io]
# Patch the SDK against a local path for cooperative development.
#replisdk = { path = "../../../replisdk-rust" }
#replisdk-experimental = { path = "../../../replisdk-rust/experimental" }
# Patch the SDK against a git commit for incremental merges between releases.
replisdk = { git = "https://github.com/replicante-io/replisdk-rust.git", rev = "25c1464" }
replisdk-experimental = { git = "https://github.com/replicante-io/replisdk-rust.git", rev = "25c1464" }


[workspace]
# Make sure this crate is NOT part of the main workspace.
