[package]
name = "replicante_models_core"
version = "0.3.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Replicante core models"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[badges]
maintenance = { status = "actively-developed" }


[dependencies]
chrono = { version = "^0.4.0", features = ["serde"] }
semver = { version = "^0.9.0", features = ["serde"] }
serde = "^1.0.34"
serde_derive = "^1.0.34"
serde_json = "^1.0.0"
uuid = { version = "^0.7.0", features = ["serde", "v4"] }

replicante_models_agent = { path = "../../common/models/agent" }


[dev-dependencies]
serde_json = "^1.0.8"
