[package]
name = "replicante_models_core"
version = "0.3.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Replicante core models"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[dependencies]
serde = "^1.0.34"
serde_derive = "^1.0.34"
serde_json = "^1.0.0"

replicante_models_agent = { path = "../../common/models/agent" }

[dependencies.chrono]
features = ["serde"]
version = "^0.4.0"

[dependencies.semver]
features = ["serde"]
version = "^0.11.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "^0.8.0"


[dev-dependencies]
serde_json = "^1.0.8"
