[package]
name = "replicante_models_core"
version = "0.3.0"
authors = ["Stefano Pogliani <stefano@spogliani.net>"]
edition = "2018"

description = "Replicante core models"
documentation = "https://www.replicante.io/docs"
homepage = "https://www.replicante.io/"
repository = "https://github.com/replicante-io/replicante"
keywords = ["automation", "datastore", "operations"]
license = "MIT"


[dependencies]
anyhow = "^1.0"
chrono = { version = "^0.4.0", features = ["serde"] }
semver = { version = "^0.11.0", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
uuid = { version = "^0.8.0", features = ["serde", "v4"] }

replicante_models_agent = { path = "../../common/models/agent" }


[dev-dependencies]
lazy_static = "^1.0"
serde_json = "^1.0"
